[gd_scene load_steps=5 format=3 uid="uid://oblkbnrxuyrg"]

[ext_resource type="PackedScene" uid="uid://cb083mnw8oavl" path="res://New/Util/Components/color_base.tscn" id="1_jqyin"]
[ext_resource type="Script" uid="uid://dnmse31qovldx" path="res://New/MiniGames/memory_game.gd" id="1_kig7u"]
[ext_resource type="Script" uid="uid://b41dcyiytphw5" path="res://New/MiniGames/LongSimonSays/game_lost.gd" id="2_kig7u"]
[ext_resource type="Theme" uid="uid://dv75hb386v55v" path="res://New/Global UI/main_theme.tres" id="3_q5831"]

[node name="MemoryGame" type="Node2D"]
script = ExtResource("1_kig7u")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1168.0
offset_bottom = 672.0
mouse_filter = 2
color = Color(0.74509805, 0.80784315, 1, 1)

[node name="ColorOptions" type="Node2D" parent="."]

[node name="ColorBase" parent="ColorOptions" instance=ExtResource("1_jqyin")]
position = Vector2(168, 96)

[node name="ColorBase2" parent="ColorOptions" instance=ExtResource("1_jqyin")]
position = Vector2(440, 88)

[node name="ColorBase7" parent="ColorOptions" instance=ExtResource("1_jqyin")]
position = Vector2(1008, 96)

[node name="ColorBase3" parent="ColorOptions" instance=ExtResource("1_jqyin")]
position = Vector2(720, 88)

[node name="ColorBase9" parent="ColorOptions" instance=ExtResource("1_jqyin")]
position = Vector2(1016, 504)

[node name="ColorBase10" parent="ColorOptions" instance=ExtResource("1_jqyin")]
position = Vector2(168, 520)

[node name="ColorBase11" parent="ColorOptions" instance=ExtResource("1_jqyin")]
position = Vector2(448, 520)

[node name="ColorBase12" parent="ColorOptions" instance=ExtResource("1_jqyin")]
position = Vector2(728, 512)

[node name="ColorBase8" parent="ColorOptions" instance=ExtResource("1_jqyin")]
position = Vector2(1008, 296)

[node name="ColorBase4" parent="ColorOptions" instance=ExtResource("1_jqyin")]
position = Vector2(168, 304)

[node name="ColorBase5" parent="ColorOptions" instance=ExtResource("1_jqyin")]
position = Vector2(440, 304)

[node name="ColorBase6" parent="ColorOptions" instance=ExtResource("1_jqyin")]
position = Vector2(728, 296)

[node name="ShowColor" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="PuzzleTime" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[node name="GameLost" type="CanvasLayer" parent="."]
process_mode = 3
layer = 8
visible = false
script = ExtResource("2_kig7u")

[node name="ColorRect" type="ColorRect" parent="GameLost"]
offset_right = 1168.0
offset_bottom = 664.0
mouse_filter = 2

[node name="youLose" type="Label" parent="GameLost"]
offset_left = 264.0
offset_top = 184.0
offset_right = 888.0
offset_bottom = 408.0
theme = ExtResource("3_q5831")
theme_override_font_sizes/font_size = 146
text = "yoiu lose"

[node name="restart" type="Button" parent="GameLost"]
offset_left = 408.0
offset_top = 384.0
offset_right = 648.0
offset_bottom = 520.0
theme = ExtResource("3_q5831")
text = "restart?"

[node name="TimerBar" type="ProgressBar" parent="."]
offset_left = 48.0
offset_top = 637.0
offset_right = 1136.0
offset_bottom = 664.0

[connection signal="timeout" from="PuzzleTime" to="." method="_on_puzzle_time_timeout"]
[connection signal="pressed" from="GameLost/restart" to="GameLost" method="_on_restart_pressed"]
